implement proper layer separation with error handling